<resources>
    <string name="app_name">Date</string>
    <string name="hint_username">用户名</string>
    <string name="sign">登录</string>
    <string name="hint_pass">密码</string>
    <string name="login">登录</string>
    <string name="hint_uers">请输入用户名</string>
    <string name="hint_passwords">请输入密码</string>
    <string name="hint_again">请再次输入密码</string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">书评</string>
    <string name="btn_back">返回注册</string>
    <string name="btn_my">记录心得</string>
    <string name="menu_add">添加感想</string>
    <string name="shou">新增心得</string>
    <string name="inp">添加心得：</string>
    <string name="btn_w">完成</string>
    <string name="lst">我的心得</string>
    <string name="book1">上海书评</string>
    <string name="boo">我的记录</string>
    <string name="book2">晶报•深港书评</string>
    <string name="book3">新京报•书评周刊</string>
    <string name="title">标题：</string>
    <string name="content">内容：</string>
    <string name="添加">添加记录</string>
</resources>
