<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gh"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/shou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shou"
        android:textSize="30dp" />

    <TextView

        android:id="@+id/add1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="23sp" />


    <EditText
        android:id="@+id/inp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inp" />

    <Button
        android:id="@+id/but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_w" />
</LinearLayout>