<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/asd"
    android:orientation="vertical"
    tools:context=".Add2Activity">

    <TextView
        android:id="@+id/shou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shou"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/inp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="30dp" />


    <EditText
        android:id="@+id/inp2"
        android:layout_width="442dp"
        android:layout_height="86dp"
        android:hint="@string/content"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@mipmap/cc"
        android:textColor="@color/white"
        android:text="@string/btn_w" />
</LinearLayout>