<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/ii"
        android:gravity="center"
        android:hint="@string/hint_username"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_below="@id/user_input"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/ii"
            android:gravity="center"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:password="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="186dp"
            android:layout_height="44dp"
            android:layout_below="@id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@mipmap/ii"
            android:text="@string/login"
            android:textColor="@android:color/holo_purple"
            android:textSize="20sp" />

    </RelativeLayout>
