<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="用户注册"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/ii"
            android:gravity="center"
            android:hint="@string/hint_uers"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/ii"
            android:gravity="center"
            android:hint="@string/hint_passwords"
            android:inputType="textPassword"
            android:password="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/ii"
            android:gravity="center"
            android:hint="@string/hint_again"
            android:inputType="textPassword"
            android:password="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@mipmap/ii"
            android:text="@string/register"
            android:textColor="@android:color/holo_purple"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>